--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   http: 0.12.0
+  shared_preferences: 0.4.3
+  rxdart: 0.20.0
+  bloc: 0.7.4
+  flutter_bloc: 0.4.7
 
 dev_dependencies:
   flutter_test:
