--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/
   fonts:
     - family: Veritas
       fonts:
